--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,11 +1,10 @@
 # Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+name: Deploy pre-built static site from gh-pages
 
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["master"]
-
+    branches: ["gh-pages"]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -37,8 +36,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload entire repository
-          # path: '.'
-          path: "./dist"
+          path: "."
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
