--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "npm run build && cp dist/index.html dist/404.html && cd dist && rm -rf .git && git init && git checkout -b gh-pages && git remote add origin https://github.com/Haliaa/TS-refresher-2.git && git add . && git commit -m 'Deploy' && git push -f origin gh-pages && cd .."
   },
   "dependencies": {
     "react": "^18.2.0",
